[package]
name = "nats-delegate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
nats = "0.24.1"
tokio = { version = "1.12.0", features = ["full"] }

[[bin]]
name = "nats-delegate"
path = "src/bin/main.rs"
